syntax = "proto3";

package snp.v1;
option go_package = ".;pb";

import "google/protobuf/empty.proto";
import "user_message.proto";


message FindUsersResponse { repeated User users = 1; }

message GetUserRequest { string id = 1; }

message GetUserResponse { User user = 1; }

message CreateUserRequest { string email = 1; }

message CreateUserResponse { User user = 1; }


service UserService {

  rpc SearchUser(google.protobuf.Empty) returns (FindUsersResponse) {}

  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}

  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
}