syntax = "proto3";

package snp.v1;
option go_package = ".;pb";

message User {
  string id = 1;
  string email = 2;
  string firstName = 3;
  string lastName = 4;
  string imageUrl = 5;
  string fullName= 6;
  string langKey= 7;
  repeated string authorities= 8;
}